# steinpy

./: pyproject.toml
ml/: networks.py  t0.py
src/steinpy/: __init__.py  utils.py
src/steinpy/ml/: DATA.py  DATA_LOCAL.py  DATA_LOCALGEN.py  MCTS.py  MCTS_LOCAL.py  __init__.py  ai.py  build_training_data.py  chessmoves.txt  client.py  games.py  gui.py  mcts_2.py  model_utilities.py  out.txt  out2.txt  policy_trainer.py  rl_notorch.py  rl_torch.py  scratch.py  server_logistics.py  server_logistics_noclass.py  single_chess.py  t0.py  times.txt  train_training_data.py  trainer.py  transfer_learner.py
src/steinpy/ml/res/: b_b_dark  b_b_light  b_k_dark  b_k_light  b_n_dark  b_n_light  b_p_dark  b_p_light  b_q_dark  b_q_light  b_r_dark  b_r_light  w_B_dark  w_B_light  w_K_dark  w_K_light  w_N_dark  w_N_light  w_P_dark  w_P_light  w_Q_dark  w_Q_light  w_R_dark  w_R_light  w_e_dark  w_e_light
