[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "steinpy"
version = "0.0.1"
authors = [
  { name="Everett Stenberg", email="everettstenberg@gmail.com" },
]
description = "A collection of everything I want in one package."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/steinshark/steinpy"
"Bug Tracker" = "https://github.com/steinshark/steinpy/issues"